--- a/src/pages/styles/BadgeNew.css
+++ b/src/pages/styles/BadgeNew.css
@@ -5,4 +5,11 @@
     background-repeat: repeat;
     margin-bottom: 1rem;
     color: #ffffff;
-  }
+
+    display: flex;
+    justify-content: center;
+}
+
+.BadgeNew__hero{
+  max-height: 100px;
+}
